--- a/src/TomsResumeCore.Web/Pages/Shared/_Main.cshtml
+++ b/src/TomsResumeCore.Web/Pages/Shared/_Main.cshtml
@@ -17,10 +17,10 @@
                 <img src="~/img/sig.png" />
             </div>
             <a class="btn btn-primary text-uppercase js-scroll-trigger" href="https://github.com/thutson/TomsResumeCore" target="_blank">
-                <i class="fab fa-2x fa-github"></i>&nbsp;View Source On GitHub
+                <i class="fab fa-2x fa-github"></i>&nbsp;Source &Aacute; CI On GitHub
             </a>
-            <a class="btn btn-primary text-uppercase js-scroll-trigger" href="https://dev.azure.com/thutson79/TomsResumeCore/_build?definitionId=3&branchName=master" target="_blank">
-                <i class="fab fa-2x fa-microsoft"></i>&nbsp;CI and Hosting with Azure
+            <a class="btn btn-primary text-uppercase js-scroll-trigger" href="https://azure.microsoft.com/en-us/" target="_blank">
+                <i class="fab fa-2x fa-microsoft"></i>&nbsp;Hosting with Azure
             </a>
         </div>
     </div>
