--- a/src/TomsResumeCore.Web/Pages/Shared/_Main.cshtml
+++ b/src/TomsResumeCore.Web/Pages/Shared/_Main.cshtml
@@ -17,7 +17,7 @@
                 <img src="~/img/sig.png" />
             </div>
             <a class="btn btn-primary text-uppercase js-scroll-trigger" href="https://github.com/thutson/TomsResumeCore" target="_blank">
-                <i class="fab fa-2x fa-github"></i>&nbsp;Source &Aacute; CI On GitHub
+                <i class="fab fa-2x fa-github"></i>&nbsp;Source and CI On GitHub
             </a>
             <a class="btn btn-primary text-uppercase js-scroll-trigger" href="https://azure.microsoft.com/en-us/" target="_blank">
                 <i class="fab fa-2x fa-microsoft"></i>&nbsp;Hosting with Azure
